--- a/exemploAlura/exemplo2_composer_e_buscador/composer.json
+++ b/exemploAlura/exemplo2_composer_e_buscador/composer.json
@@ -6,7 +6,8 @@
   "require": {
     "guzzlehttp/guzzle": "^7.9",
     "symfony/dom-crawler": "^7.2",
-    "symfony/css-selector": "^7.2"
+    "symfony/css-selector": "^7.2",
+    "ext-pdo": "*"
   },
   "autoload": {
     "psr-4": {
